--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -4,7 +4,7 @@
     <div class="join-div">
         <div class="content">
             👏 KubeSphere v3.0 即将正式 GA！<a href="https://www.qingcloud.com/kubesphere2020#tz2" target="_blank" rel="noopener noreferrer">免费回看 v3.0 发布会视频 📺</a>
-            <a href="https://github.com/kubesphere/kubekey" target="_blank" rel="noopener noreferrer">或参与社区帮助测试 v3.0 →</a>
+            <a href="https://kubesphere.com.cn/forum/d/1625-kubesphere-3-0" target="_blank" rel="noopener noreferrer">或参与社区帮助测试 v3.0 →</a>
             <img id="close-join" src="/images/header/close.svg" alt="close">
         </div>
     </div>
