add website news page

--- a/layouts/conferences/single.html
+++ b/layouts/conferences/single.html
@@ -33,7 +33,7 @@
             </div>
         </div>
         <div class='aside aside-fixed'>
-            <div class='title'>Table of Contents</div>
+            <div class='title'>{{ i18n "Table of Contents" }}</div>
             <div class='tabs'>{{ .TableOfContents }}</div>
         </div>
     </div>
