--- a/layouts/news/single.html
+++ b/layouts/news/single.html
@@ -13,7 +13,7 @@
 <section class="main-section {{ if eq .Site.Language.Lang "zh"}} padding{{ end }}">
     <div class="common-layout">
         <div class='breadcrumb'>
-            <span><a href='{{ "blogs" | relLangURL }}'>{{ i18n "introduction1"}}</a> > </span>
+            <span><a href='{{ "news" | relLangURL }}'>{{ i18n "news"}}</a> > </span>
             <span>{{ .Title }}</span>
         </div>
         <div class='main-div'>
