--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -7,9 +7,11 @@
     <meta name="description" content="{{ with .Params.Description }}{{ . }}{{ else }}{{ with $data.head.description }}{{ . }}{{ end }}{{ end }}">
     <meta name="keywords" content="{{ with .Params.Keywords }}{{ range $i, $e := . }}{{ if $i }} {{ end }}{{ $e }}{{ end }}{{ else }}{{ with $data.head.keywords }}{{ . }}{{ end }}{{ end }}">
     
-    {{ with .Params.snapshot }}
-    <meta property=”og:image” content="{{ . }}" />
-    {{ end }}
+    <meta property="og:type" content="article"/>
+    <meta property="og:title" content="{{ with .Params.Title }}{{ . }}{{ else }}{{ with $data.head.title }}{{ . }}{{ end }}{{ end }}"/>
+    <meta property="og:description" content="{{ with .Params.Description }}{{ . }}{{ else }}{{ with $data.head.description }}{{ . }}{{ end }}{{ end }}"/>
+    <meta property="og:image" content="{{ with .Params.snapshot }}{{ . }}{{ else }}{{ with .Site.Params.snapshot }}{{ . | absURL }}{{ end }}{{ end }}"/>
+    <meta property="og:url" content="{{ .Permalink }}"/>
 
     {{- partial "css.html" . -}}
 
