update content page

--- a/layouts/news/single.html
+++ b/layouts/news/single.html
@@ -1,45 +1,1 @@
-<!DOCTYPE html>
-<html lang="{{ with .Site.LanguageCode }}{{ . }}{{ else }}en-US{{ end }}">
-{{- partial "head.html" . -}}
-
-{{ $style := resources.Get "scss/content.scss" | toCSS | minify | fingerprint }}
-<link rel="stylesheet" href="{{ $style.RelPermalink }}">
-
-{{ $style := resources.Get "scss/markdown.scss" | toCSS | minify | fingerprint }}
-<link rel="stylesheet" href="{{ $style.RelPermalink }}">
-
-<body>
-{{- partial "header.html" . -}}
-<section class="main-section {{ if eq .Site.Language.Lang "zh"}} padding{{ end }}">
-    <div class="common-layout">
-        <div class='breadcrumb'>
-            <span><a href='{{ "news" | relLangURL }}'>{{ i18n "news"}}</a> > </span>
-            <span>{{ .Title }}</span>
-        </div>
-        <div class='main-div'>
-            <div class='author'>{{ .Params.author }}</div>
-            <div class='date'>{{ i18n "Published on" }}：{{ string .Params.createTime }}</div>
-            <h1>{{ .Title }}</h1>
-            <div class="share-1">
-                {{- partial "share.html" . -}}
-            </div>
-            <div class='content'>
-                <div class='md-body'>
-                    {{ .Content }}
-                </div>
-            </div>
-            <div class="share-2">
-                {{- partial "share.html" . -}}
-            </div>
-        </div>
-        <div class='aside aside-fixed'>
-            <div class='title'>{{ i18n "Table of Contents" }}</div>
-            <div class='tabs'>{{ .TableOfContents }}</div>
-        </div>
-    </div>
-</section>
-{{- partial "footer.html" . -}}
-<script src='{{ "js/aside.js" | relURL }}'></script>
-</body>
-
-</html>
+{{ partial "content.html" (dict "context" . "parent" "news" "text" "news") }}
