change docs css

--- a/assets/scss/doc.scss
+++ b/assets/scss/doc.scss
@@ -44,6 +44,7 @@ body {
         }
 
         .menu {
+            margin-left: 10px;
             display: inline-block;
             vertical-align: middle;
             width: 16px;
