--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -15,4 +15,5 @@
 {{- partial "css.html" . -}}
 
 <script src='{{ "js/jquery-3.5.0.min.js" | relURL }}'></script>
+<script src='{{ "js/viewer.min.js" | relURL }}'></script>
 <script src='{{ "js/jquery.modal.min.js" | relURL }}'></script>
