--- a/layouts/partials/section.html
+++ b/layouts/partials/section.html
@@ -19,7 +19,7 @@
             </li>
             {{ end }}
             {{ if gt $length 5 }}
-            <li><a href="{{ .RelPermalink }}">{{ i18n "Overview" }}</a></li>
+            <li><a href="{{ .RelPermalink }}">{{ i18n "Learn More" }}...</a></li>
             {{ end }}
         </ul>
     </li>
