change file path

--- a/layouts/partials/breadcrumb.html
+++ b/layouts/partials/breadcrumb.html
@@ -14,7 +14,7 @@
 </li>
 {{ else}}
 <li>
-  <a href="{{ .p1.Permalink }}">{{ .p1.LinkTitle }} / </a>
+  <a href="{{ .p1.Permalink }}">{{ .p1.LinkTitle }}&nbsp;/&nbsp;</a>
 </li>
 {{ end }}
 
