--- a/layouts/docs/single.html
+++ b/layouts/docs/single.html
@@ -95,6 +95,7 @@
 
             <div class="content-div main-div">
                 <div class="md-body">
+                    <h1>{{ .Title }}</h1>
                     {{ .Content }}
                 </div>
             </div>
