add notice and tabs

--- a/layouts/docs/list.html
+++ b/layouts/docs/list.html
@@ -14,5 +14,5 @@
         {{ partial "section" . }}
     </div>
 </section>
-
+<script src='{{ "js/markdown-tab.js" | relURL }}'></script>
 {{ end }}
