--- a/layouts/docs/single.html
+++ b/layouts/docs/single.html
@@ -138,6 +138,8 @@
 </section>
 {{ if .IsPage }}
 <script src='{{ "js/aside.js" | relURL }}'></script>
+<script src='{{ "js/markdown-tab.js" | relURL }}'></script>
+
 {{ end }}
 <script>
     var languageCode = '{{.Site.Language.Lang}}'
