fix path and add code copy

--- a/assets/scss/docs.scss
+++ b/assets/scss/docs.scss
@@ -119,3 +119,117 @@
       }
   }
 }
+
+.section-3 {
+  .common-layout {
+    box-sizing: border-box;
+    position: relative;
+    padding-right: 373px;
+    border-radius: 8px;
+    overflow: hidden;
+
+    @media only screen and (max-width: $mobile-max-width) {
+      padding: 0 20px;
+    }
+
+    .left-part-div {
+      padding: 37px 67px 18px 40px;
+      background-image: linear-gradient(102deg, #4a499a 28%, #8552c3 119%);
+
+      @media only screen and (max-width: $mobile-max-width) {
+        padding: 20px;
+        border-radius: 8px;
+      }
+      h2 {
+        font-size: 28px;
+        color: #ffffff;
+      }
+
+      p {
+        margin-top: 18px;
+        font-size: 14px;
+        line-height: 1.43;
+        color: #ffffff;
+      }
+
+      .common-flex-layout {
+        margin-top: 33px;
+        justify-content: space-around;
+        div {
+          position: relative;
+
+          img {
+            width: 186px;
+            height: 114px;
+            border-radius: 11px;
+            object-fit: contain;
+          }
+
+          p {
+            position: relative;
+            margin: 0 auto;
+            top: -10px;
+            width: 148px;
+            height: 34px;
+            font-size: 11px;
+            line-height: 34px;
+            text-align: center;
+            color: #ffffff;
+            border-radius: 17px;
+            box-shadow: 0 10px 50px 0 rgba(34, 43, 62, 0.1), 0 8px 16px 0 rgba(33, 43, 61, 0.2);
+            background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1) 97%), linear-gradient(to bottom, #242e42, #242e42);          
+            &:hover {
+              box-shadow: none;
+            }
+          }
+        }
+      }
+    }
+
+    .right-part-div {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      right: 0;
+      width: 373px;
+      box-sizing: border-box;
+      padding: 124px 66px;
+      text-align: center;
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+      background-color: #ffffff;
+      background-image: url('/images/docs/bg-line.png');
+
+      @media only screen and (max-width: $mobile-max-width) {
+        position: relative;
+        width: 100%;
+        margin-top: 20px;
+        border-radius: 8px;
+      }
+
+      h3 {
+        font-size: 20px;
+        color: #3d3e49;
+      }
+
+      button {
+        width: 148px;
+        height: 34px;
+        margin-top: 22px;
+        border-radius: 17px;
+        border: none;
+        font-size: 11px;
+        font-weight: 600;
+        color: #ffffff;
+        cursor: pointer;
+        box-shadow: 0 10px 50px 0 rgba(34, 43, 62, 0.1), 0 8px 16px 0 rgba(33, 43, 61, 0.2);
+        background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1) 97%), linear-gradient(to bottom, #55bc8a, #55bc8a);
+        
+        &:hover {
+          box-shadow: none;
+        }
+      }
+    }
+  }
+}
