--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -44,9 +44,9 @@
                 {{ else }}
                 <li {{ if eq $section .URL }} class="active"{{ end}}>
                     {{ if hasPrefix .URL "http" }}
-                    <a href="{{ .URL }}" target="_blank" rel="noopener noreferrer">{{ .Name }}</a>
+                    <a data-docs="{{ .Name }}" href="{{ .URL }}" target="_blank" rel="noopener noreferrer">{{ .Name }}</a>
                     {{ else }}
-                    <a href="{{ .URL | relLangURL }}">{{ .Name }}</a>
+                    <a data-docs="{{ .Name }}" href="{{ .URL | relLangURL }}">{{ .Name }}</a>
                     {{ end }}
                 </li>
                 {{ end }}
@@ -116,7 +116,7 @@
                 </ul>
             </li>
             {{ else }}
-            <li {{ if eq $section .URL }} class="active"{{ end}}><a href="{{ .URL | relLangURL }}">{{ .Name }}</a></li>
+            <li {{ if eq $section .URL }} class="active"{{ end}}><a data-docs="{{ .Name }}" href="{{ .URL | relLangURL }}">{{ .Name }}</a></li>
             {{ end }}
 
             {{ end }}
@@ -196,6 +196,28 @@ var bindClickClose = function() {
         $('.main-section').removeClass('padding')
     })
 }
+
+var language = '{{.Site.Language.Lang}}'
+
+var bindClickDocs = function() {
+    var host = window.location.origin
+    $('a').click(function(e) {
+    var name = $(this).data('docs')
+    if (name === 'Documentation') {
+      e.preventDefault()
+      if (host === 'https://kubesphere.com.cn/' || host === 'https://kubesphere.io/') {
+          if (language === 'zh') {
+            window.open('https://kubesphere.com.cn/docs/zh-CN/')
+          } else {
+            window.open('https://kubesphere.io/docs/')
+          }
+      } else {
+          window.open('/docs/')
+      }
+    }
+  })
+}
+bindClickDocs()
 
 bindClickClose()
 
