--- a/layouts/partials/section.html
+++ b/layouts/partials/section.html
@@ -25,6 +25,6 @@
     </li>
     {{ end }}
     {{ range $sections }}
-    <li style="height: 0;"></li>
+    <li style="height: 0; margin: 0; padding: 0;"></li>
     {{ end }}
 </ul>
