--- a/assets/scss/common.scss
+++ b/assets/scss/common.scss
@@ -334,3 +334,36 @@ section {
 .code-tabs .active {
   display: block;
 }
+
+// copy button
+.copy-code-button {
+  display: none;
+  position: relative;
+  z-index: 2;
+  width: 0;
+  height: 0;
+  margin-left: auto;
+  margin-right: 25px;
+  transform: translateY(5px);
+  cursor: pointer;
+
+  div {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 20px;
+    height: 20px;
+    background-image: url('/images/docs/copy-code.svg');
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+}
+
+.copy-code-button:hover {
+  top: -2px;
+}
+
+.highlight pre {
+  /* Avoid pushing up the copy buttons. */
+  margin: 0;
+}
