--- a/layouts/partials/breadcrumb.html
+++ b/layouts/partials/breadcrumb.html
@@ -10,11 +10,11 @@
 {{ end }}
 {{ if eq .p1 .p2 }}
 <li class="active">
-  <a href="{{ .p1.Permalink }}">{{ .p1.LinkTitle }}</a>
+  <a href="{{ .p1.RelPermalink }}">{{ .p1.LinkTitle }}</a>
 </li>
 {{ else}}
 <li>
-  <a href="{{ .p1.Permalink }}">{{ .p1.LinkTitle }}&nbsp;/&nbsp;</a>
+  <a href="{{ .p1.RelPermalink }}">{{ .p1.LinkTitle }}&nbsp;/&nbsp;</a>
 </li>
 {{ end }}
 
