--- a/layouts/partials/content.html
+++ b/layouts/partials/content.html
@@ -47,6 +47,8 @@
   </section>
   {{ partial "footer.html" $context }}
   <script src='{{ "js/aside.js" | relURL }}'></script>
+  <script src='{{ "js/markdown-tab.js" | relURL }}'></script>
+
   <script>
     var viewer = new Viewer(document.querySelector('.md-body'), {
         url: 'src'
