change copy button

--- a/assets/scss/markdown.scss
+++ b/assets/scss/markdown.scss
@@ -408,7 +408,14 @@
 }
 
 .md-body pre {
+  position: relative;
   word-wrap: normal;
+
+  &:hover {
+    .copy-code-button {
+      display: block;
+    }
+  }
 }
 
 .md-body pre > code {
