--- a/assets/scss/common.scss
+++ b/assets/scss/common.scss
@@ -338,29 +338,20 @@ section {
 // copy button
 .copy-code-button {
   display: none;
-  position: relative;
+  position: absolute;
+  top: 5px;
+  right: 5px;
   z-index: 2;
-  width: 0;
-  height: 0;
-  margin-left: auto;
-  margin-right: 25px;
-  transform: translateY(5px);
+  width: 20px;
+  height: 20px;
+  background-image: url('/images/docs/copy-code.svg');
+  background-repeat: no-repeat;
+  background-size: cover;
   cursor: pointer;
-
-  div {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 20px;
-    height: 20px;
-    background-image: url('/images/docs/copy-code.svg');
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
 }
 
 .copy-code-button:hover {
-  top: -2px;
+  top: 3px;
 }
 
 .highlight pre {
