fix content table and copy button

--- a/assets/scss/common.scss
+++ b/assets/scss/common.scss
@@ -336,6 +336,10 @@ section {
 }
 
 // copy button
+.code-over-div {
+  position: relative;
+  overflow: auto;
+}
 .copy-code-button {
   display: none;
   position: absolute;
